--- a/OnovaStore/Views/Simple/LoginFacebookCallback.cshtml
+++ b/OnovaStore/Views/Simple/LoginFacebookCallback.cshtml
@@ -17,7 +17,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="LoginFacebookCallback">
+        <form asp-action="LoginFacebookConfirm">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="PictureUrl" class="control-label"></label>
-                <img href="@Model.PictureUrl" class="form-control" />
+@*                <img href="@Model.PictureUrl" class="form-control" />*@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
