--- a/OnovaStore/Views/Simple/Test.cshtml
+++ b/OnovaStore/Views/Simple/Test.cshtml
@@ -12,6 +12,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<a href="javascript:window.open('https://www.facebook.com/v2.11/dialog/oauth?&response_type=token&display=popup&client_id=167241287210501&display=popup&redirect_uri=http://localhost:58212/simple/LoginViaFacebook&scope=email',null,'width=600,height=400');">Login Via Facebook</a>
+<a href="https://www.facebook.com/v2.11/dialog/oauth?&response_type=token&client_id=167241287210501&redirect_uri=http://localhost:58212/simple/GetAccessToken&scope=email">Login Via Facebook</a>
 </body>
 </html>
