--- a/OnovaStore/Views/Simple/LoginFacebookCallback.cshtml
+++ b/OnovaStore/Views/Simple/LoginFacebookCallback.cshtml
@@ -15,18 +15,19 @@
 
 <h4>FacebookUserData</h4>
 <hr />
+    
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="LoginFacebookConfirm">
+        <form asp-action="LoginFacebookCallback" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" readonly/>
+                <input asp-for="Id" class="form-control" readonly />
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" readonly/>
+                <input asp-for="Email" class="form-control" readonly />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -35,18 +36,23 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ConfirmPassword" class="control-label"></label>
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" readonly/>
+                <input asp-for="Name" class="form-control" readonly />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" readonly/>
+                <input asp-for="Gender" class="form-control" readonly />
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PictureUrl" class="control-label"></label>
-@*                <img href="@Model.PictureUrl" class="form-control" />*@
+                <input asp-for="@Model.Picture.Data.Url" class="control-label" hidden id="urlPicture"/>
+                <img src="" id="renderUrlPicture" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -58,6 +64,11 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+<script type="text/javascript">
+    var url = document.getElementById("urlPicture").value;
+    var img = document.getElementById("renderUrlPicture");
 
+    img.src = url;
+</script>
 </body>
 </html>
