Return access_token if user already existed. Waiting for UI.

--- a/OnovaStore/Views/Simple/ReturnAccessToken.cshtml
+++ b/OnovaStore/Views/Simple/ReturnAccessToken.cshtml
@@ -9,8 +9,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ReturnAccessToken</title>
+    <script type="text/javascript">
+        window.localStorage.setItem("access_token", "@Model");
+    </script>
 </head>
 <body>
-<p>@Model</p>
+<p>you are logging</p>
 </body>
 </html>
