--- a/OnovaStore/Views/Simple/LoginViaFacebook.cshtml
+++ b/OnovaStore/Views/Simple/LoginViaFacebook.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model string
 @{
     Layout = null;
 }
@@ -9,52 +9,15 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>LoginViaFacebook</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-<script type="text/javascript">
-//    function getParameterByName(name, url) {
-//        if (!url) url = window.location.href;
-//        name = name.replace(/[\[\]]/g, "\\$&");
-//        var regex = new RegExp("[?&#]" + name + "(=([^&#]*)|&|#|$)"),
-//            results = regex.exec(url);
-//        if (!results) return null;
-//        if (!results[2]) return '';
-//        return decodeURIComponent(results[2].replace(/\+/g, " "));
-//    }
-//
-//    var accessToken = getParameterByName("access_token");
-//    var message = {};
-//    if (accessToken) {
-//        message.status = true;
-//        message.accessToken = accessToken;
-//    }
-//    else {
-//        message.status = false;
-//        message.error = getParameterByName("error");
-//        message.errorDescription = getParameterByName("error_description");
-//    }
-//
-//    $(function () {
-//        $.ajax({
-//            type: "POST",
-//            data: JSON.stringify(message),
-//            url: "/simple/loginviafacebook",
-//            contentType: "application/json",
-//            success: function (result) {
-//                $.ajax({
-//                    type: "POST",
-//                    data: result.data,
-//                    url: result.url,
-//                    contentType: "application/json",
-//                    success: function() {
-//                        location.replace(result.url);
-//                    }
-//                });
-//            }
-//        });
-//    });
-//    self.close();
-</script>
+
+        @if (!string.IsNullOrEmpty(Model))
+        {
+            <script type="text/javascript">
+                alert("@Model");
+            </script>
+        }
+
 </body>
 </html>
