Done layout login, register. Login success; Register and Facebook Login not implemented yet.

--- a/OnovaStore/Views/Shared/_LoginPartial.cshtml
+++ b/OnovaStore/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
 {
     <!-- Account -->
     <li class="list-inline-item">
-        <a id="account-dropdown-invoker-2" class="g-color-text g-color-primary--hover g-font-weight-400 g-text-underline--none--hover" href="#!"
+        <a id="account-dropdown-invoker-2" class="g-color-text g-color-primary--hover g-font-weight-400 g-text-underline--none--hover" href="#"
            aria-controls="account-dropdown-2"
            aria-haspopup="true"
            aria-expanded="false"
