--- a/OnovaStore/Views/Account/Login.cshtml
+++ b/OnovaStore/Views/Account/Login.cshtml
@@ -1,43 +1,137 @@
-﻿@using System.Collections.Generic
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Authentication
-@model OnovaStore.Models.Account.LoginViewModel
-
+﻿@model OnovaStore.Models.Account.LoginViewModel
+@inject System.Security.Claims.IClaimPrincipalManager claimManager
 @{
     ViewData["Title"] = "Log in";
+    Layout = "_Layout";
 }
 
-<h2>@ViewData["Title"].</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section>
-            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Email" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
+    <!-- Login -->
+<section class="container g-pt-100 g-pb-20">
+    <div class="row justify-content-between">
+        <div class="col-md-6 col-lg-5 order-lg-2 g-mb-80">
+            <div class="g-brd-around g-brd-gray-light-v3 g-bg-white rounded g-px-30 g-py-50 mb-4">
+                <header class="text-center mb-4">
+                    <h1 class="h4 g-color-black g-font-weight-400">Login to Your Account</h1>
+                </header>
+                <!-- Form -->
+                <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="g-py-15">
+                    <div class="mb-4">
+                        <div class="input-group g-rounded-left-3">
+                            <span class="input-group-addon g-width-45 g-brd-gray-light-v3 g-color-gray-dark-v5">
+                                <i class="icon-finance-067 u-line-icon-pro"></i>
+                            </span>
+                            <input asp-for="Email" class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v3 g-rounded-left-0 g-rounded-right-3 g-py-15 g-px-15" type="email" required placeholder="Email Adress"/>
+                            <div class="form-group has-danger mb-0">
+                                <span asp-validation-for="Email" class="form-control-feedback"></span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
+                    <div class="mb-3">
+                        <div class="input-group g-rounded-left-3 mb-3">
+                            <span class="input-group-addon g-width-45 g-brd-gray-light-v3 g-color-gray-dark-v5">
+                                <i class="icon-media-094 u-line-icon-pro"></i>
+                            </span>
+                            <input asp-for="Password" class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v3 g-rounded-left-0 g-rounded-right-3 g-py-15 g-px-15" type="password" required minlength="6" maxlength="32" placeholder="Password"/>
+                            <div class="form-group has-danger mb-0">
+                                <span asp-validation-for="Password" class="form-control-feedback"></span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
+                    <div class="form-group has-danger mb-0">
+                        <div asp-validation-summary="All" class="form-control-feedback"></div>
                     </div>
-                </div>
+                    <div class="row justify-content-between mb-3">
+                        <div class="col align-self-center" style="visibility: hidden">
+                            <label class="form-check-inline u-check g-color-gray-dark-v5 g-font-size-13 g-pl-25 mb-0">
+                                <input class="g-hidden-xs-up g-pos-abs g-top-0 g-left-0" type="checkbox">
+                                <span class="d-block u-check-icon-checkbox-v6 g-absolute-centered--y g-left-0">
+                                    <i class="fa" data-check-icon="&#xf00c"></i>
+                                </span>
+                                Keep signed in
+                            </label>
+                        </div>
+                        <div class="col align-self-center text-right">
+                            <a class="g-font-size-13" href="@Url.Action("ForgotPassword", "Account")">Forgot password?</a>
+                        </div>
+                    </div>
+                    <div class="mb-5">
+                        <button class="btn btn-block u-btn-primary g-font-size-12 text-uppercase g-py-12 g-px-25" type="submit">Login</button>
+                    </div>
+                    <div class="d-flex justify-content-center text-center g-mb-30">
+                        <div class="d-inline-block align-self-center g-width-50 g-height-1 g-bg-gray-light-v1"></div>
+                        <span class="align-self-center g-color-gray-dark-v5 mx-4">OR</span>
+                        <div class="d-inline-block align-self-center g-width-50 g-height-1 g-bg-gray-light-v1"></div>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col-12">
+                            <a class="btn btn-block u-btn-facebook g-font-size-12 text-uppercase g-py-12 g-px-25 mr-2" style="color: white;" href="https://www.facebook.com/v2.11/dialog/oauth?&response_type=token&client_id=167241287210501&redirect_uri=http://localhost:58212/simple/GetAccessToken&scope=email">
+                                <i class="mr-1 fa fa-facebook" style="color: white;"></i>
+                                Facebook
+                            </a>
+                        </div>
+                    </div>
+                </form>
+                <!-- End Form -->
+            </div>
 
-            </form>
-        </section>
+            <div class="text-center">
+                <p class="g-color-gray-dark-v5 mb-0">
+                    Don't have an account?
+                    <a class="g-font-weight-600" href="@Url.Action("Register", "Account")">signup</a>
+                </p>
+            </div>
+
+        </div>
+        <div class="col-md-6 order-lg-1 g-mb-80">
+            <div class="mb-5">
+                <h2 class="h1 g-font-weight-400 mb-3">Welcome to Onova</h2>
+                <p class="g-color-gray-dark-v4">The site you can buy anything you need with the comfortable price.</p>
+            </div>
+            <div class="row">
+                <div class="col-lg-9">
+                    <!-- Icon Blocks -->
+                    <div class="media mb-5">
+                        <div class="d-flex mr-3">
+                            <span class="align-self-center u-icon-v1 u-icon-size--lg g-color-primary">
+                                <i class="icon-finance-168 u-line-icon-pro"></i>
+                            </span>
+                        </div>
+                        <div class="media-body align-self-center">
+                            <h3 class="h5 g-font-weight-400">Reliable contracts</h3>
+                            <p class="g-color-gray-dark-v5 mb-0">Reliable system</p>
+                        </div>
+                    </div>
+                    <!-- End Icon Blocks -->
+                    <!-- Icon Blocks -->
+                    <div class="media mb-5">
+                        <div class="d-flex mr-3">
+                            <span class="align-self-center u-icon-v1 u-icon-size--lg g-color-primary">
+                                <i class="icon-finance-193 u-line-icon-pro"></i>
+                            </span>
+                        </div>
+                        <div class="media-body align-self-center">
+                            <h3 class="h5 g-font-weight-400">Security</h3>
+                            <p class="g-color-gray-dark-v5 mb-0">Secure your money and info</p>
+                        </div>
+                    </div>
+                    <!-- End Icon Blocks -->
+                    <!-- Icon Blocks -->
+                    <div class="media">
+                        <div class="d-flex mr-3">
+                            <span class="align-self-center u-icon-v1 u-icon-size--lg g-color-primary">
+                                <i class="icon-finance-153 u-line-icon-pro"></i>
+                            </span>
+                        </div>
+                        <div class="media-body align-self-center">
+                            <h3 class="h5 g-font-weight-400">Discount</h3>
+                            <p class="g-color-gray-dark-v5 mb-0">Buy everything with discount price</p>
+                        </div>
+                    </div>
+                    <!-- End Icon Blocks -->
+                </div>
+            </div>
+        </div>
     </div>
+</section>
+<!-- End Login -->
 
-</div>
