--- a/OnovaStore/Views/Simple/LoginViaFacebook.cshtml
+++ b/OnovaStore/Views/Simple/LoginViaFacebook.cshtml
@@ -16,6 +16,7 @@
         {
             <script type="text/javascript">
                 alert("@Model");
+                location.replace('@Url.Action("Login", "Account")');
             </script>
         }
 
