Done layout for login, login facebook, register. Waiting for sending email, and forgot password function.

--- a/OnovaStore/Views/Account/GetAccessToken.cshtml
+++ b/OnovaStore/Views/Account/GetAccessToken.cshtml
@@ -34,7 +34,7 @@
             message.errorDescription = getParameterByName("error_description");
         }
 //        location.replace("/simple/loginviafacebook?" + $.param(message));
-        location.replace('@Url.Action("LoginViaFacebook", "Simple")' + '?' + $.param(message));
+        location.replace('@Url.Action("LoginViaFacebook", "Account")' + '?' + $.param(message));
 
     });
     </script>
