--- a/OnovaStore/Views/Account/Register.cshtml
+++ b/OnovaStore/Views/Account/Register.cshtml
@@ -30,7 +30,7 @@
                         <div class="g-mb-20">
                             <input asp-for="ConfirmPassword" required class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v3 rounded g-py-15 g-px-15" placeholder="Confirm password">
                         </div>
-                        <div class="mb-1">
+                        <div class="mb-1" style="visibility: hidden">
                             <label class="form-check-inline u-check g-color-gray-dark-v5 g-font-size-13 g-pl-25 mb-2">
                                 <input class="g-hidden-xs-up g-pos-abs g-top-0 g-left-0" type="checkbox">
                                 <span class="d-block u-check-icon-checkbox-v6 g-absolute-centered--y g-left-0">
@@ -39,7 +39,7 @@
                                 I accept the <a href="#!">Terms and Conditions</a>
                             </label>
                         </div>
-                        <div class="mb-3">
+                        <div class="mb-3" style="visibility: hidden">
                             <label class="form-check-inline u-check g-color-gray-dark-v5 g-font-size-13 g-pl-25 mb-2">
                                 <input class="g-hidden-xs-up g-pos-abs g-top-0 g-left-0" type="checkbox">
                                 <span class="d-block u-check-icon-checkbox-v6 g-absolute-centered--y g-left-0">
@@ -48,8 +48,11 @@
                                 Subscribe to our newsletter
                             </label>
                         </div>
+                        <div class="form-group has-danger mb-0">
+                            <div asp-validation-summary="All" class="form-control-feedback"></div>
+                        </div>
                         <div class="mb-4">
-                            <button class="btn btn-block u-btn-primary g-font-size-12 text-uppercase g-py-12 g-px-25" type="button">Signup</button>
+                            <button class="btn btn-block u-btn-primary g-font-size-12 text-uppercase g-py-12 g-px-25" type="submit">Signup</button>
                         </div>
                     </form>
                     <div class="d-flex justify-content-center text-center g-mb-30">
@@ -59,7 +62,7 @@
                     </div>
                     <div class="no-gutters">
                         <div class="col-12">
-                            <a class="btn btn-block u-btn-facebook g-font-size-12 text-uppercase g-py-12 g-px-25 mr-2" style="color: white;" href="https://www.facebook.com/v2.11/dialog/oauth?&response_type=token&client_id=167241287210501&redirect_uri=http://localhost:58212/simple/GetAccessToken&scope=email">
+                            <a class="btn btn-block u-btn-facebook g-font-size-12 text-uppercase g-py-12 g-px-25 mr-2" style="color: white;" href="https://www.facebook.com/v2.11/dialog/oauth?&response_type=token&client_id=167241287210501&redirect_uri=http://localhost:58212/Account/GetAccessToken&scope=email">
                                 <i class="mr-1 fa fa-facebook" style="color: white;"></i>
                                 Facebook
                             </a>
