Edit layout for index

--- a/OnovaStore/Views/Shared/_Header.cshtml
+++ b/OnovaStore/Views/Shared/_Header.cshtml
@@ -229,8 +229,8 @@
 </button>
 <!-- End Responsive Toggle Button -->
 <!-- Logo -->
-<a class="navbar-brand" href="home-page-1.html">
-    <img src="assets/img/logo/logo-1.png" alt="Image Description">
+<a class="navbar-brand" href="@Url.Action("Index", "Home")">
+    <img src="~/html/assets/img/logo/logo.jpg" style="width: 55px; height: 55px;" alt="Image Description">
 </a>
 <!-- End Logo -->
 <!-- Navigation -->
