--- a/OnovaStore/Views/Shared/_Layout.cshtml
+++ b/OnovaStore/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>Onova - Ecommerce Site | @ViewBag.Title</title>
+    <title>@ViewBag.Title | Onova</title>
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
