--- a/OnovaStore/Areas/Manage/Views/Shared/_LoginPartial.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_LoginPartial.cshtml
@@ -6,64 +6,20 @@
         <div class="g-pos-rel g-px-10--lg">
             <a id="profileMenuInvoker" class="d-block" href="#!" aria-controls="profileMenu" aria-haspopup="true" aria-expanded="false" data-dropdown-event="click" data-dropdown-target="#profileMenu" data-dropdown-type="css-animation" data-dropdown-duration="300"
                data-dropdown-animation-in="fadeIn" data-dropdown-animation-out="fadeOut">
+                <span class="g-pos-rel" style="visibility: hidden">
+                    <span class="u-badge-v2--xs u-badge--top-right g-hidden-sm-up g-bg-lightblue-v5 g-mr-5"></span>
+                    <img class="g-width-30 g-width-40--md g-height-30 g-height-40--md rounded-circle g-mr-10--sm" src="~/html/assets/img/icons/img1.jpg" alt="Image description">
+                </span>
                 <span class="g-pos-rel g-top-2">
                     <span class="g-hidden-sm-down">@claimManager.GivenName</span>
                     <i class="hs-admin-angle-down g-pos-rel g-top-2 g-ml-10"></i>
                 </span>
             </a>
             <!-- Top User Menu -->
-            <ul id="profileMenu" class="g-pos-abs g-left-0 g-width-100x--lg g-nowrap g-font-size-14 g-py-20 g-mt-17 rounded" aria-labelledby="profileMenuInvoker">
-                <li class="g-hidden-sm-up g-mb-10">
-                    <a class="media g-py-5 g-px-20" href="@Url.Action("Index", "Home", new {Area = "Manage"})">
-                        <span class="d-flex align-self-center g-pos-rel g-mr-12">
-                            <span class="u-badge-v1 g-top-minus-3 g-right-minus-3 g-width-18 g-height-18 g-bg-lightblue-v5 g-font-size-10 g-color-white rounded-circle p-0">10</span>
-                            <i class="hs-admin-comment-alt"></i>
-                        </span>
-                        <span class="media-body align-self-center">Unread Messages</span>
-                    </a>
-                </li>
-                <li class="g-hidden-sm-up g-mb-10">
-                    <a class="media g-py-5 g-px-20" href="#!">
-                        <span class="d-flex align-self-center g-mr-12">
-                            <i class="hs-admin-bell"></i>
-                        </span>
-                        <span class="media-body align-self-center">Notifications</span>
-                    </a>
-                </li>
-                <li class="g-mb-10">
-                    <a class="media g-color-lightred-v2--hover g-py-5 g-px-20" href="#!">
-                        <span class="d-flex align-self-center g-mr-12">
-                            <i class="hs-admin-user"></i>
-                        </span>
-                        <span class="media-body align-self-center">My Profile</span>
-                    </a>
-                </li>
-                <li class="g-mb-10">
-                    <a class="media g-color-lightred-v2--hover g-py-5 g-px-20" href="#!">
-                        <span class="d-flex align-self-center g-mr-12">
-                            <i class="hs-admin-rocket"></i>
-                        </span>
-                        <span class="media-body align-self-center">Upgrade Plan</span>
-                    </a>
-                </li>
-                <li class="g-mb-10">
-                    <a class="media g-color-lightred-v2--hover g-py-5 g-px-20" href="#!">
-                        <span class="d-flex align-self-center g-mr-12">
-                            <i class="hs-admin-layout-grid-2"></i>
-                        </span>
-                        <span class="media-body align-self-center">Latest Projects</span>
-                    </a>
-                </li>
-                <li class="g-mb-10">
-                    <a class="media g-color-lightred-v2--hover g-py-5 g-px-20" href="#!">
-                        <span class="d-flex align-self-center g-mr-12">
-                            <i class="hs-admin-headphone-alt"></i>
-                        </span>
-                        <span class="media-body align-self-center">Get Support</span>
-                    </a>
-                </li>
+            <ul id="profileMenu" class="g-pos-abs g-left-0 g-width-auto--lg g-nowrap g-font-size-14 g-py-10 g-mt-17 rounded" aria-labelledby="profileMenuInvoker">
+                
                 <li class="mb-0">
-                    <a class="media g-color-lightred-v2--hover g-py-5 g-px-20" href="#!">
+                    <a class="media g-color-lightred-v2--hover g-py-5 g-px-20" href="javascript:document.getElementById('logoutForm').submit()">
                         <span class="d-flex align-self-center g-mr-12">
                             <i class="hs-admin-shift-right"></i>
                         </span>
@@ -74,4 +30,5 @@
             <!-- End Top User Menu -->
         </div>
     </div>
+    <form id="logoutForm" asp-controller="Account" asp-action="Logout" method="post" hidden></form>
 }
