--- a/OnovaStore/Areas/Manage/Views/Shared/_Sidebar.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_Sidebar.cshtml
@@ -1,7 +1,8 @@
-﻿@{
-    var pageName = ViewContext.RouteData.Values["controller"].ToString();
-    var viewName = ViewContext.RouteData.Values["action"].ToString();
-    @inject System.Security.Claims.IClaimPrincipalManager claimManager
+﻿@inject System.Security.Claims.IClaimPrincipalManager claimManager
+
+@{
+    var pageName = ViewContext.RouteData.Values["controller"].ToString().ToLower();
+    var viewName = ViewContext.RouteData.Values["action"].ToString().ToLower();
 }
 
 @if (claimManager.IsAuthenticated)
@@ -11,12 +12,35 @@
             <li class="u-sidebar-navigation-v1-menu-item u-side-nav--top-level-menu-item ">
                 @if (claimManager.Role == "CustomerSupport")
                 {
-                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName.ToLower() == "setting" ? "active" : "")" href="@Url.Action("ListReview", "Support", new {area = "Manage"})">
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && (viewName == "index" || viewName == "") ? "active" : "")" href="@Url.Action("Index", "Support", new {area = "Manage"})">
+                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
+                            <i class="hs-admin-home"></i>
+                        </span>
+                        <span class="media-body align-self-center">Index</span>
+                    </a>
+
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listreview" ? "active" : "")" href="@Url.Action("ListReview", "Support", new {area = "Manage"})">
                         <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
                             <i class="hs-admin-check-box"></i>
                         </span>
-                        <span class="media-body align-self-center">Review</span>
+                        <span class="media-body align-self-center">Reviews</span>
                     </a>
+
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listquestion" ? "active" : "")" href="@Url.Action("ListQuestion", "Support", new {area = "Manage"})">
+                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
+                            <i class="hs-admin-help-alt"></i>
+                        </span>
+                        <span class="media-body align-self-center">Questions</span>
+                    </a>
+
+
+                    //Temporary not implement
+                    @*                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listquestion" ? "active" : "")" href="@Url.Action("SupportStatistic", "Support", new {area = "Manage"})">*@
+                    @*                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">*@
+                    @*                            <i class="hs-admin-stats-up"></i>*@
+                    @*                        </span>*@
+                    @*                        <span class="media-body align-self-center">Statistics</span>*@
+                    @*                    </a>*@
                 }
             </li>
         </ul>
