continue frontend imageupload and backend api to insert to db.

--- a/OnovaStore/Views/Account/LoginFacebookCallback.cshtml
+++ b/OnovaStore/Views/Account/LoginFacebookCallback.cshtml
@@ -1,4 +1,5 @@
-@model OnovaStore.Models.FacebookUserData
+@using OnovaStore.DTOs
+@model OnovaStore.DTOs.FacebookUserData
 
 @{
     Layout = "_Layout";
