--- a/OnovaStore/Areas/Manage/Views/Shared/_Sidebar.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_Sidebar.cshtml
@@ -19,14 +19,14 @@
                         <span class="media-body align-self-center">Index</span>
                     </a>
 
-                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listreview" ? "active" : "")" href="@Url.Action("ListReview", "Support", new {area = "Manage"})">
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listreview" ? "active" : "")" href="@Url.Action("Reviews", "Support", new {area = "Manage"})">
                         <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
                             <i class="hs-admin-check-box"></i>
                         </span>
                         <span class="media-body align-self-center">Reviews</span>
                     </a>
 
-                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listquestion" ? "active" : "")" href="@Url.Action("ListQuestion", "Support", new {area = "Manage"})">
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listquestion" ? "active" : "")" href="@Url.Action("Questions", "Support", new {area = "Manage"})">
                         <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
                             <i class="hs-admin-help-alt"></i>
                         </span>
@@ -34,13 +34,37 @@
                     </a>
 
 
-                    //Temporary not implement
-                    @*                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listquestion" ? "active" : "")" href="@Url.Action("SupportStatistic", "Support", new {area = "Manage"})">*@
-                    @*                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">*@
-                    @*                            <i class="hs-admin-stats-up"></i>*@
-                    @*                        </span>*@
-                    @*                        <span class="media-body align-self-center">Statistics</span>*@
-                    @*                    </a>*@
+//Temporary not implement
+            @*                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "support" && viewName == "listquestion" ? "active" : "")" href="@Url.Action("SupportStatistic", "Support", new {area = "Manage"})">*@
+            @*                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">*@
+            @*                            <i class="hs-admin-stats-up"></i>*@
+            @*                        </span>*@
+            @*                        <span class="media-body align-self-center">Statistics</span>*@
+            @*                    </a>*@
+                }
+
+                @if (claimManager.Role == "ProductManager")
+                {
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "manager" && (viewName == "index" || viewName == "") ? "active" : "")" href="@Url.Action("Index", "Manager", new {area = "Manage"})">
+                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
+                            <i class="hs-admin-home"></i>
+                        </span>
+                        <span class="media-body align-self-center">Index</span>
+                    </a>
+
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "manager" && viewName == "listreview" ? "active" : "")" href="@Url.Action("Images", "Manager", new {area = "Manage"})">
+                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
+                            <i class="hs-admin-image"></i>
+                        </span>
+                        <span class="media-body align-self-center">Upload Image(Test)</span>
+                    </a>
+
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "manager" && viewName == "listquestion" ? "active" : "")" href="@Url.Action("Products", "Manager", new {area = "Manage"})">
+                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
+                            <i class="hs-admin-package"></i>
+                        </span>
+                        <span class="media-body align-self-center">Products</span>
+                    </a>
                 }
             </li>
         </ul>
