--- a/OnovaStore/Areas/Manage/Views/Shared/_LoginPartial.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_LoginPartial.cshtml
@@ -30,5 +30,5 @@
             <!-- End Top User Menu -->
         </div>
     </div>
-    <form id="logoutForm" asp-controller="Account" asp-action="Logout" method="post" hidden></form>
+    <form id="logoutForm" asp-controller="Account" asp-area="" asp-action="Logout" method="post" hidden></form>
 }
