--- a/OnovaStore/Areas/Manage/Views/Manager/Index.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "_Layout";
 }
 
 <h2>Index</h2>
