Modify GeneralImage table. Done upload image and add to database. Continue working on adding product with ImageThumbnail and ListImages.

--- a/OnovaStore/Areas/Manage/Views/Shared/_Sidebar.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_Sidebar.cshtml
@@ -52,7 +52,7 @@
                         <span class="media-body align-self-center">Index</span>
                     </a>
 
-                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "manager" && viewName == "listreview" ? "active" : "")" href="@Url.Action("Images", "Manager", new {area = "Manage"})">
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "manager" && viewName == "listreview" ? "active" : "")" href="@Url.Action("UploadImage", "Manager", new {area = "Manage"})">
                         <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
                             <i class="hs-admin-image"></i>
                         </span>
