--- a/OnovaStore/Areas/Manage/Views/Manager/UploadImage.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/UploadImage.cshtml
@@ -21,6 +21,7 @@
         </div>
         <div class="form-group has-danger mb-0">
             <span asp-validation-for="Files" class="form-control-feedback"></span>
+            <div asp-validation-summary="All" class="form-control-feedback"></div>
         </div>
         <br />
         <div class="form-group">
@@ -29,6 +30,8 @@
 
     </form>
 </div>
+
+
 
 
 <script type="text/javascript">
@@ -43,3 +46,11 @@
         }
     }
 </script>
+
+@section Styles {
+    <style type="text/css">
+        ul {
+            list-style-type: none;
+        }
+    </style>
+}
