--- a/OnovaStore/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="~/html/assets/css/unify-admin.css">
     <!-- CSS Customization -->
     <link rel="stylesheet" href="~/html/assets/css/custom.css">
+
+    @RenderSection("Styles", required: false)
 </head>
 <body>
 @Html.Partial("_Header")
