continue working on select input for category and brand name to insert with product

--- a/OnovaStore/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -38,109 +38,120 @@
     @RenderSection("Styles", required: false)
 </head>
 <body>
-@Html.Partial("_Header")
+    @Html.Partial("_Header")
 
-<main class="container-fluid px-0 g-pt-65">
-<div class="row no-gutters g-pos-rel g-overflow-x-hidden">
-@Html.Partial("_Sidebar")
-@RenderBody()
-<div class="col g-ml-45 g-ml-0--lg g-pb-65--md">
+    <main class="container-fluid px-0 g-pt-65">
+        <div class="row no-gutters g-pos-rel">
+            @Html.Partial("_Sidebar")
+            @RenderBody()
+            <div class="col g-ml-45 g-ml-0--lg g-pb-65--md">
 
-</div>
-</div>
-</main>
-<!-- JS Global Compulsory -->
-<script src="~/html/assets/vendor/jquery/jquery.min.js"></script>
-<script src="~/html/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
-<script src="~/html/assets/vendor/popper.min.js"></script>
-<script src="~/html/assets/vendor/bootstrap/bootstrap.min.js"></script>
-<script src="~/html/assets/vendor/cookiejs/jquery.cookie.js"></script>
+            </div>
+        </div>
+    </main>
+    <!-- JS Global Compulsory -->
+    <script src="~/html/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="~/html/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
+    <script src="~/html/assets/vendor/popper.min.js"></script>
+    <script src="~/html/assets/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="~/html/assets/vendor/cookiejs/jquery.cookie.js"></script>
 
-<!-- jQuery UI Core -->
-<script src="~/html/assets/vendor/jquery-ui/ui/widget.js"></script>
-<script src="~/html/assets/vendor/jquery-ui/ui/version.js"></script>
-<script src="~/html/assets/vendor/jquery-ui/ui/keycode.js"></script>
-<script src="~/html/assets/vendor/jquery-ui/ui/position.js"></script>
-<script src="~/html/assets/vendor/jquery-ui/ui/unique-id.js"></script>
-<script src="~/html/assets/vendor/jquery-ui/ui/safe-active-element.js"></script>
-<!-- jQuery UI Helpers -->
-<script src="~/html/assets/vendor/jquery-ui/ui/widgets/menu.js"></script>
-<script src="~/html/assets/vendor/jquery-ui/ui/widgets/mouse.js"></script>
-<!-- jQuery UI Widgets -->
-<script src="~/html/assets/vendor/jquery-ui/ui/widgets/datepicker.js"></script>
-<!-- JS Plugins Init. -->
-<script src="~/html/assets/vendor/appear.js"></script>
-<script src="~/html/assets/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
-<script src="~/html/assets/vendor/flatpickr/dist/js/flatpickr.min.js"></script>
-<script src="~/html/assets/vendor/malihu-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="~/html/assets/vendor/chartist-js/chartist.min.js"></script>
-<script src="~/html/assets/vendor/chartist-js-tooltip/chartist-plugin-tooltip.js"></script>
-<script src="~/html/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
-<!-- JS Unify -->
-<script src="~/html/assets/js/hs.core.js"></script>
-<script src="~/html/assets/js/components/hs.side-nav.js"></script>
-<script src="~/html/assets/js/helpers/hs.hamburgers.js"></script>
-<script src="~/html/assets/js/components/hs.range-datepicker.js"></script>
-<script src="~/html/assets/js/components/hs.datepicker.js"></script>
-<script src="~/html/assets/js/components/hs.dropdown.js"></script>
-<script src="~/html/assets/js/components/hs.scrollbar.js"></script>
-<script src="~/html/assets/js/components/hs.area-chart.js"></script>
-<script src="~/html/assets/js/components/hs.donut-chart.js"></script>
-<script src="~/html/assets/js/components/hs.bar-chart.js"></script>
-<script src="~/html/assets/js/helpers/hs.focus-state.js"></script>
-<script src="~/html/assets/js/components/hs.popup.js"></script>
-<!-- JS Custom -->
-<script src="~/html/assets/js/custom.js"></script>
-<!-- JS Plugins Init. -->
-<script>
-    $(document).on('ready',
-        function() {
-            // initialization of custom select
-            $('.js-select').selectpicker();
+    <!-- jQuery UI Core -->
+    <script src="~/html/assets/vendor/jquery-ui/ui/widget.js"></script>
+    <script src="~/html/assets/vendor/jquery-ui/ui/version.js"></script>
+    <script src="~/html/assets/vendor/jquery-ui/ui/keycode.js"></script>
+    <script src="~/html/assets/vendor/jquery-ui/ui/position.js"></script>
+    <script src="~/html/assets/vendor/jquery-ui/ui/unique-id.js"></script>
+    <script src="~/html/assets/vendor/jquery-ui/ui/safe-active-element.js"></script>
+    <!-- jQuery UI Helpers -->
+    <script src="~/html/assets/vendor/jquery-ui/ui/widgets/menu.js"></script>
+    <script src="~/html/assets/vendor/jquery-ui/ui/widgets/mouse.js"></script>
+    <!-- jQuery UI Widgets -->
+    <script src="~/html/assets/vendor/jquery-ui/ui/widgets/datepicker.js"></script>
+    <!-- JS Plugins Init. -->
+    <script src="~/html/assets/vendor/appear.js"></script>
+    <script src="~/html/assets/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
+    <script src="~/html/assets/vendor/flatpickr/dist/js/flatpickr.min.js"></script>
+    <script src="~/html/assets/vendor/malihu-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="~/html/assets/vendor/chartist-js/chartist.min.js"></script>
+    <script src="~/html/assets/vendor/chartist-js-tooltip/chartist-plugin-tooltip.js"></script>
+    <script src="~/html/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+    <script src="~/html/assets/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script src="~/html/assets/vendor/datatables/media/js/dataTables.select.js"></script>
+    <!-- JS Unify -->
+    <script src="~/html/assets/js/hs.core.js"></script>
+    <script src="~/html/assets/js/components/hs.side-nav.js"></script>
+    <script src="~/html/assets/js/helpers/hs.hamburgers.js"></script>
+    <script src="~/html/assets/js/components/hs.range-datepicker.js"></script>
+    <script src="~/html/assets/js/components/hs.datepicker.js"></script>
+    <script src="~/html/assets/js/components/hs.dropdown.js"></script>
+    <script src="~/html/assets/js/components/hs.scrollbar.js"></script>
+    <script src="~/html/assets/js/components/hs.area-chart.js"></script>
+    <script src="~/html/assets/js/components/hs.donut-chart.js"></script>
+    <script src="~/html/assets/js/components/hs.bar-chart.js"></script>
+    <script src="~/html/assets/js/helpers/hs.focus-state.js"></script>
+    <script src="~/html/assets/js/components/hs.popup.js"></script>
+    <script src="~/html/assets/js/components/hs.datatables.js"></script>
+    <!-- JS Custom -->
+    <script src="~/html/assets/js/custom.js"></script>
+    <!-- JS Plugins Init. -->
+    <script>
+        $(document).on('ready',
+            function () {
+                // initialization of custom select
+                $('.js-select').selectpicker();
 
-            // initialization of sidebar navigation component
-            $.HSCore.components.HSSideNav.init('.js-side-nav');
+                // initialization of sidebar navigation component
+                $.HSCore.components.HSSideNav.init('.js-side-nav');
 
-            // initialization of hamburger
-            $.HSCore.helpers.HSHamburgers.init('.hamburger');
+                // initialization of hamburger
+                $.HSCore.helpers.HSHamburgers.init('.hamburger');
 
-            // initialization of charts
-            $.HSCore.components.HSAreaChart.init('.js-area-chart');
-            $.HSCore.components.HSDonutChart.init('.js-donut-chart');
-            $.HSCore.components.HSBarChart.init('.js-bar-chart');
+                // initialization of charts
+                $.HSCore.components.HSAreaChart.init('.js-area-chart');
+                $.HSCore.components.HSDonutChart.init('.js-donut-chart');
+                $.HSCore.components.HSBarChart.init('.js-bar-chart');
 
-            // initialization of range datepicker
-            $.HSCore.components.HSRangeDatepicker.init('#rangeDatepicker, #rangeDatepicker2, #rangeDatepicker3');
+                // initialization of range datepicker
+                $.HSCore.components.HSRangeDatepicker.init('#rangeDatepicker, #rangeDatepicker2, #rangeDatepicker3');
 
-            // initialization of datepicker
-            $.HSCore.components.HSDatepicker.init('#datepicker',
-                {
-                    dayNamesMin: [
-                        'SU',
-                        'MO',
-                        'TU',
-                        'WE',
-                        'TH',
-                        'FR',
-                        'SA'
-                    ]
+                // initialization of datepicker
+                $.HSCore.components.HSDatepicker.init('#datepicker',
+                    {
+                        dayNamesMin: [
+                            'SU',
+                            'MO',
+                            'TU',
+                            'WE',
+                            'TH',
+                            'FR',
+                            'SA'
+                        ]
+                    });
+
+                // initialization of HSDropdown component
+                $.HSCore.components.HSDropdown.init($('[data-dropdown-target]'), {
+                    dropdownHideOnScroll: false,
+                    dropdownType: 'css-animation',
+                    dropdownAnimationIn: 'fadeIn',
+                    dropdownAnimationOut: 'fadeOut'
                 });
 
-            // initialization of HSDropdown component
-            $.HSCore.components.HSDropdown.init($('[data-dropdown-target]'), { dropdownHideOnScroll: false });
+                // initialization of custom scrollbar
+                $.HSCore.components.HSScrollBar.init($('.js-custom-scroll'));
 
-            // initialization of custom scrollbar
-            $.HSCore.components.HSScrollBar.init($('.js-custom-scroll'));
+                // initialization of datatables
+                $.HSCore.components.HSDatatables.init('.js-datatable');
 
-            // initialization of popups
-            $.HSCore.components.HSPopup.init('.js-fancybox',
-                {
-                    btnTpl: {
-                        smallBtn:
+                // initialization of popups
+                $.HSCore.components.HSPopup.init('.js-fancybox',
+                    {
+                        btnTpl: {
+                            smallBtn:
                             '<button data-fancybox-close class="btn g-pos-abs g-top-25 g-right-30 g-line-height-1 g-bg-transparent g-font-size-16 g-color-gray-light-v3 g-brd-none p-0" title=""><i class="hs-admin-close"></i></button>'
-                    }
-                });
-        });
-</script>
+                        }
+                    });
+            });
+    </script>
 </body>
 </html>
