Done brand. continue on category and promotion.

--- a/OnovaStore/Areas/Manage/Views/Manager/Brands.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/Brands.cshtml
@@ -14,7 +14,7 @@
         <h3 class="g-font-weight-400 g-font-size-16 g-color-black mb-0">Brands</h3>
     </div>
     <div class="media d-md-flex align-items-center ml-auto">
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center" style="visibility: hidden">
             <span class="g-hidden-sm-down g-color-gray-dark-v6 g-mr-12">Show:</span>
             <div class="u-select--v1 g-pr-20">
                 <select id="datatableEntries1" class="js-select u-select--v1-select w-100">
