Done add and display category. Continue on edit.

--- a/OnovaStore/Views/Home/Success.cshtml
+++ b/OnovaStore/Views/Home/Success.cshtml
@@ -1,5 +1,4 @@
-﻿@using OnovaStore.Models.Brand
-@model List<Brand>
+﻿@model List<Brand>
 @inject System.Security.Claims.IClaimPrincipalManager claimManager
 
 @{
