--- a/OnovaStore/Areas/Manage/Views/Manager/EditBrand.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/EditBrand.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnovaStore.Models.Brand.Brand
+﻿@model OnovaStore.Areas.Manage.Models.Brand.EditBrandViewModel
 @{
     Layout = "_Layout";
     ViewBag.Title = "Edit Brand";
